--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>Simple Page</title>
+    <title>暇人鯖</title>
+    <meta http-equiv="refresh" content="3; url=http://www.hima-server.com">
   </head>
   <body>
     <img src="banner.gif">
+    <p>3秒後にリダイレクトします...</p>
     <p><a href="http://www.hima-server.com">リダイレクトしない場合はこちら</a></p>
   </body>
 </html>
